# fastapi-viewset

./: .gitignore  README.md  pyproject.toml
fastapi_viewset/: __init__.py  base_crud_view.py  base_permissions.py  base_serializer.py  base_view_set.py  constants.py
